Reworked source layout
- Add Repository and GalleryRepository skeletons
- Move src/web to web
- Rework src dir for a better layout

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 error_log
 vendor
-src/cache/
-src/web/assets/screen.css
-src/web/assets/scripts.js
+cache
+web/assets/screen.css
+web/assets/scripts.js
